<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_green_background_ten_dp_top_corner_round"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/choose_from"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_white_background_ten_dp_bottom_corner_round"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/textViewGallery"
                android:padding="10dp"
                android:textSize="18dp"
                android:text="@string/phone_s_gallery"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrayColor"></View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/textViewTakePic"
                android:padding="10dp"
                android:textSize="18dp"
                android:text="@string/take_a_pic"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrayColor"></View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCancel"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="18dp"
                android:text="@string/cancel"
                android:textColor="@android:color/holo_red_dark" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>