<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/app_bar_bg"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_toRightOf="@+id/imageView6"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_logo_small" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/imageView2"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColor="@android:color/white"
            android:textSize="24dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            app:srcCompat="@drawable/ic_back" />

    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:src="@drawable/password_reset_lock_icon" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/reset_your_password"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/editTextCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bottom_line_drawable"
                android:hint="@string/currentPassword"
                android:inputType="textPassword"
                android:nextFocusDown="@id/editTextNewPassword"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp" />


            <EditText
                android:id="@+id/editTextNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bottom_line_drawable"
                android:hint="@string/new_password"
                android:nextFocusDown="@id/editTextConfirmNewPassword"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp" />

            <EditText
                android:id="@+id/editTextConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bottom_line_drawable"
                android:hint="@string/confirm_new_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp" />


            <Button
                android:id="@+id/btnChangePassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/app_bar_bg"
                android:stateListAnimator="@null"
                android:text="@string/change_password"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
